--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.17",
+    "clsx": "^2.1.0",
     "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
