--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,8 @@ jobs:
           node-version: '20.x'
       - run: npm install --global yarn
       - run: yarn run build --if-present
-      - uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      - name: Publish via FTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
         server: ${{ secrets.FTP_HOST }}
         username: ${{ secrets.FTP_USERNAME }}
