--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           node-version: '20.x'
       - run: npm install --global yarn
+      - run: yarn install --frozen-lockfile
       - run: yarn run build --if-present
       - name: Publish via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
