--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,9 @@ name: Build + Deploy
 on: [push]
 
 jobs:
-  build:
-
+  deploy:
     runs-on: ubuntu-latest
     environment: prod
-
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js
@@ -16,7 +14,7 @@ jobs:
           node-version: '20.x'
       - run: npm install --global yarn
       - run: yarn install --frozen-lockfile
-      - run: yarn run build --if-present
+      - run: yarn run build
       - name: Publish via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
