--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Publish via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
+          local-dir: ./dist/
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
