--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,16 +9,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '20.x'
       - run: npm install --global yarn
       - run: yarn install --frozen-lockfile
       - run: yarn run build
+      
       - name: Publish via FTP
+        working-directory: ./dist
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
-          local-dir: ./dist/
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
