--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "autoprefixer": "^10.4.17",
     "clsx": "^2.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
